err/sif-nats.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/asyncio_nats_client-0.6.4.egg-info'...
Listing './lib/python3.5/site-packages/msgpack'...
Listing './lib/python3.5/site-packages/msgpack_python-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/nats'...
Listing './lib/python3.5/site-packages/nats/aio'...
Listing './lib/python3.5/site-packages/nats/protocol'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sif'...
Compiling './lib/python3.5/site-packages/sif/data.py'...
***   File "./lib/python3.5/site-packages/sif/data.py", line 27
    service: str
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sif/sif.py'...
***   File "./lib/python3.5/site-packages/sif/sif.py", line 55
    self.rpcs: RpcFuncMap = {}
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sif/transports.py'...
***   File "./lib/python3.5/site-packages/sif/transports.py", line 19
    self.incoming_rpcs: RpcMap = {}
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sif_nats'...
Compiling './lib/python3.5/site-packages/sif_nats/data.py'...
***   File "./lib/python3.5/site-packages/sif_nats/data.py", line 17
    servers: List[str] = ["nats://127.0.0.1:4222"]
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sif_nats/rpc.py'...
***   File "./lib/python3.5/site-packages/sif_nats/rpc.py", line 104
    services: ServicesMap = {}
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sif_nats-0.0.2.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
